# CMake_Trailer

./: .gitignore  CMakeLists.txt  HowToUse.md  ToDo.md
cmake/: FindEGL.cmake
foo/: CMakeLists.txt
foo/include/: greeting.h
foo/src/: greeting.cc
integration_test/: it_main.cpp
integration_test/foo/: sample_foo.cpp  sample_test.cpp
simulator_stub/: CMakeLists.txt
simulator_stub/src/: get_time.c
